Added stuff to report in update_tak1

--- a/Task1_update/report.ipynb
+++ b/Task1_update/report.ipynb
@@ -24,6 +24,7 @@
     "\n",
     "### Zhymir Thompson\n",
     "- Performed experiments, gathered results for Carlini Wagner attack.\n",
+    "- Modified script to make generating and evaluating AEs easier (now only requires having sub data and roots and paths to outputs and configs)\n",
     "\n",
     "### Mahmudul Hasan\n",
     "- Performed JSMA experiment, did evaluation and wrote JSMA report.\n",
@@ -92,60 +93,104 @@
     "\n",
     "## CW Attack and Evaluation\n",
     "\n",
+    "The CW attack is an adversarial attack that attempts to find a balance between an example that tricks the target model and an example that is valid (realistic image).\n",
+    "\n",
     "For the CW attack, the variables altered were the learning rate and normalization method. There are a total of 10 variations where 5 learning rates are repeated for each normalization method. The files for this attack are stored in ~/src/task1/attack2.\n",
     "\n",
     "### Files Used\n",
     "\n",
-    "Configs:\n",
-    "* athena-mnist.json\n",
-    "* attack-config.json\n",
-    "* data-config.json\n",
-    "* model-config.json\n",
-    "* ./results/sub-data-config.json\n",
+    "#### Configs:\n",
     "\n",
-    "sub-samples:\n",
+    "* src/configs/task3/attack_2_cw_config.json\n",
+    "* src/configs/task3/athena-mnist.json\n",
+    "* src/configs/task3/attack_cw_config.json\n",
+    "* src/configs/task3/data_cw_config.json\n",
+    "* src/configs/task3/data_config.json\n",
+    "* src/configs/task3/sub_data_config.json\n",
+    "* src/configs/task3/model_config.json\n",
     "\n",
-    "* sublabels-10-ratio_0.001-477207.062.npy\n",
-    "* subsamples-10-ratio_0.001-477207.062.npy\n",
+    "#### sub-samples:\n",
     "\n",
-    "AE's:\n",
+    "* Task1_update/data/sublabels-1000-ratio_0.1-398037.171.npy\n",
+    "* Task1_update/data/subsamples-1000-ratio_0.1-398037.171.npy\n",
     "\n",
-    "* cw-L2-lr0.2.npy\n",
-    "* cw-L2-lr0.02.npy\n",
-    "* cw-L2-lr0.002.npy\n",
-    "* cw-L2-lr0.00002.npy\n",
-    "* cw-L2-lr0.99.npy\n",
-    "* cw-Lf-lr0.2.npy\n",
-    "* cw-Lf-lr0.02.npy\n",
-    "* cw-Lf-lr0.002.npy\n",
-    "* cw-Lf-lr0.00002.npy\n",
-    "* cw-Lf-lr0.99.npy\n",
+    "#### AE's:\n",
     "\n",
-    "_\\*AEs located in ./results folder_\n",
+    "* Task1_update/data/cw_norm_l2_lr_1e-3_iter_10_.npy\n",
+    "* Task1_update/data/cw_norm_linf_lr_1e-4_iter_20_eps_0-010_.npy\n",
+    "* Task1_update/data/cw_norm_linf_lr_1e-4_iter_10_eps_0-010_.npy\n",
+    "* Task1_update/data/cw_norm_linf_lr_1e-4_iter_10_eps_0-20_.npy\n",
+    "* Task1_update/data/cw_norm_l2_lr_1e-5_iter_20_.npy\n",
+    "* Task1_update/data/cw_norm_linf_lr_1e-4_iter_30_eps_0-020_.npy\n",
+    "* Task1_update/data/cw_norm_l2_lr_1e-5_iter_10_.npy\n",
+    "* Task1_update/data/cw_norm_l2_lr_1e-5_iter_50_.npy\n",
+    "* Task1_update/data/cw_norm_linf_lr_1e-4_iter_50_eps_0-010_.npy\n",
+    "* Task1_update/data/cw_norm_linf_lr_1e-4_iter_20_eps_0-020_.npy\n",
+    "* Task1_update/data/cw_norm_l2_lr_1e-3_iter_50_.npy\n",
+    "* Task1_update/data/cw_norm_l2_lr_1e-5_iter_30_.npy\n",
+    "* Task1_update/data/cw_norm_l2_lr_1e-3_iter_20_.npy\n",
+    "* Task1_update/data/cw_norm_linf_lr_1e-4_iter_30_eps_0-010_.npy\n",
+    "* Task1_update/data/cw_norm_l2_lr_1e-3_iter_30_.npy\n",
+    "* Task1_update/data/cw_norm_linf_lr_1e-4_iter_50_eps_0-20_.npy\n",
+    "\n",
+    "#### Results:\n",
+    "\n",
+    "* Task1_update/results/cw_norm_l2_lr_1e-3_iter_10__eval.csv\n",
+    "* Task1_update/results/cw_norm_linf_lr_1e-4_iter_10_eps_0-010__eval.csv\n",
+    "* Task1_update/results/cw_norm_linf_lr_1e-4_iter_50_eps_0-20__eval.csv\n",
+    "* Task1_update/results/cw_norm_l2_lr_1e-5_iter_50__eval.csv\n",
+    "* Task1_update/results/cw_norm_linf_lr_1e-4_iter_50_eps_0-010__eval.csv\n",
+    "* Task1_update/results/cw_norm_linf_lr_1e-4_iter_30_eps_0-010__eval.csv\n",
+    "* Task1_update/results/cw_norm_l2_lr_1e-5_iter_20__eval.csv\n",
+    "* Task1_update/results/cw_norm_linf_lr_1e-4_iter_20_eps_0-020__eval.csv\n",
+    "* Task1_update/results/cw_norm_l2_lr_1e-3_iter_20__eval.csv\n",
+    "* Task1_update/results/cw_norm_l2_lr_1e-3_iter_30__eval.csv\n",
+    "* Task1_update/results/cw_norm_l2_lr_1e-5_iter_30__eval.csv\n",
+    "* Task1_update/results/cw_norm_linf_lr_1e-4_iter_10_eps_0-20__eval.csv\n",
+    "* Task1_update/results/cw_norm_l2_lr_1e-5_iter_10__eval.csv\n",
+    "* Task1_update/results/cw_norm_linf_lr_1e-4_iter_20_eps_0-010__eval.csv\n",
+    "* Task1_update/results/cw_norm_l2_lr_1e-3_iter_50__eval.csv\n",
+    "* Task1_update/results/cw_norm_linf_lr_1e-4_iter_30_eps_0-020__eval.csv\n",
+    "\n",
     "\n",
     "### Results\n",
     "\n",
     "#### Summary and Analysis\n",
     "\n",
-    "The L2 vs LINF norm showed a higher error rate result overall with LINF normalization for most cases.\n",
-    "The data also supports the idea that high learning rates have a slight edge over weak learning rates, but the actual difference is insignificant and could easily disappear given a larger sample size.\n",
-    "The data was only trained on a sample size of 10 due to the large increase time for a factor increase of 10.\n",
+    "Overall, the experiment data showed a trend similar to the graph for sqrt(x) in response to increased max iterations or increased learning rate. In other words, an increase in the max number of iterations or learning rate led to an increase in error rate, but the error rate increased less and less as either the max number of iterations or learning rate continued to increase.\n",
+    "\n",
+    "None of the experiments were successful in causing the undefended model (UM) to have an error rate at or above 50%. Furthermore, the error rate never went above 1.2% for the Ensemble and the error rate for the PGD trained model was only slightly better at a maximum of 2.5%.\n",
+    "\n",
+    "Regarding the time to generate these experiments, L2 normalization took significantly longer than the L infinity normalization while the data suggested both were almost equal in effectiveness. Practically, it would seem advantageous to use L infinity normalization since, as suggested in the explanation of the carlini wagner attack article below, one could test numerous different epsilons to find a good balance between error and minimal changes to the image in the time it would take for a few L2 normalized attacks to converge.\n",
+    "\n",
     "\n",
     "#### Data\n",
     "\n",
-    "|Norm |LR  |UM      |Ensemble|PGD-ADT|  |\n",
-    "|-----|----|--------|------|-----|-----|\n",
-    "|L2   |0.02|0.4     |0.0   |0.0  |     |\n",
-    "|L2   |0.2 |0.5     |0.0   |0.1  |     |\n",
-    "|L2|0.002|0.5|0.0|0.0|\n",
-    "|L2|0.99|0.6|0.0|0.1|\n",
-    "|L2|0.00002|0.8|0.8|0.8|\n",
-    "|LINF|0.02|0.8|0.8|0.8|\n",
-    "|LINF|0.2|0.8|0.8|0.8|\n",
-    "|LINF|0.002|0.8|0.8|0.8|\n",
-    "|LINF|0.99|0.8|0.8|0.8|\n",
-    "|LINF|0.00002|0.7|0.8|0.8|\n",
+    "|Norm|LR     |Max Iter|Epsilon|UM      |Ensemble|PGD-ADT|Image 1|Image 2|Image 3|\n",
+    "|----|-------|--------|-------|--------|-------|-------|-------|-------|--------|\n",
+    "|L2  |0.001  |10      |N/A    |0.302326|0.0121335|0.0242669|![](figures/cw_norm_l2_lr_1e-3_iter_10__image_0.png)|![](figures/cw_norm_l2_lr_1e-3_iter_10__image_1.png) |![](figures/cw_norm_l2_lr_1e-3_iter_10__image_2.png) |\n",
+    "|L2  |0.001  |20      |N/A    |0.3700708|0.0111224|0.0252781 |![](figures/cw_norm_l2_lr_1e-3_iter_20__image_0.png)|![](figures/cw_norm_l2_lr_1e-3_iter_20__image_1.png)|![](figures/cw_norm_l2_lr_1e-3_iter_20__image_2.png)|\n",
+    "|L2  |0.001  |30      |N/A    |0.388271|0.0111224|0.02426694|![](figures/cw_norm_l2_lr_1e-3_iter_30__image_0.png)|![](figures/cw_norm_l2_lr_1e-3_iter_30__image_1.png)|![](figures/cw_norm_l2_lr_1e-3_iter_30__image_2.png)|\n",
+    "|L2  |0.001  |50      |N/A    |0.4115268|0.01112235|0.02426694|![](figures/cw_norm_l2_lr_1e-3_iter_50__image_0.png)|![](figures/cw_norm_l2_lr_1e-3_iter_50__image_1.png)|![](figures/cw_norm_l2_lr_1e-3_iter_50__image_2.png)|\n",
+    "|L2  |0.00001|10      |N/A    |0.255814|0.0101112|0.02022245|![](figures/cw_norm_l2_lr_1e-5_iter_10__image_0.png)|![](figures/cw_norm_l2_lr_1e-5_iter_10__image_1.png)|![](figures/cw_norm_l2_lr_1e-5_iter_10__image_2.png)|\n",
+    "|L2  |0.00001|20      |N/A    |0.35187058|0.010111224|0.0232558|![](figures/cw_norm_l2_lr_1e-5_iter_20__image_0.png)|![](figures/cw_norm_l2_lr_1e-5_iter_20__image_1.png)| ![](figures/cw_norm_l2_lr_1e-5_iter_20__image_2.png)|\n",
+    "|L2  |0.00001|30      |N/A    |0.37815976|0.01011122|0.02426694|![](figures/cw_norm_l2_lr_1e-5_iter_30__image_0.png)|![](figures/cw_norm_l2_lr_1e-5_iter_30__image_1.png)|![](figures/cw_norm_l2_lr_1e-5_iter_30__image_2.png)|\n",
+    "|L2  |0.00001|50      |N/A    |0.39433772|0.010111224|0.02426694|![](figures/cw_norm_l2_lr_1e-5_iter_50__image_0.png)|![](figures/cw_norm_l2_lr_1e-5_iter_50__image_1.png)|![](figures/cw_norm_l2_lr_1e-5_iter_50__image_2.png)|\n",
+    "|LINF|0.0001 |10|0.1|0.1051567|0.0101112|0.01112235|![](figures/cw_norm_linf_lr_1e-4_iter_10_eps_0-010__image_0.png)|![](figures/cw_norm_linf_lr_1e-4_iter_10_eps_0-010__image_1.png)|![](figures/cw_norm_linf_lr_1e-4_iter_10_eps_0-010__image_2.png)|\n",
+    "|LINF|0.0001 |10|0.2|0.40242669|0.01213347|0.0222447|![](figures/cw_norm_linf_lr_1e-4_iter_10_eps_0-20__image_0.png)|![](figures/cw_norm_linf_lr_1e-4_iter_10_eps_0-20__image_1.png)|![](figures/cw_norm_linf_lr_1e-4_iter_10_eps_0-20__image_2.png)|\n",
+    "|LINF|0.0001 |20|0.1|0.1183013|0.0101112|0.01112235|![](figures/cw_norm_linf_lr_1e-4_iter_20_eps_0-010__image_0.png)|![](figures/cw_norm_linf_lr_1e-4_iter_20_eps_0-010__image_1.png)|![](figures/cw_norm_linf_lr_1e-4_iter_20_eps_0-010__image_2.png)|\n",
+    "|LINF|0.0001 |20|0.2|0.4509606|0.0121335|0.0242669|![](figures/cw_norm_linf_lr_1e-4_iter_20_eps_0-020__image_0.png)|![](figures/cw_norm_linf_lr_1e-4_iter_20_eps_0-020__image_1.png)|![](figures/cw_norm_linf_lr_1e-4_iter_20_eps_0-020__image_2.png)|\n",
+    "|LINF|0.0001 |30|0.1|0.1223458|0.0101112|0.01112235|![](figures/cw_norm_linf_lr_1e-4_iter_30_eps_0-010__image_0.png)|![](figures/cw_norm_linf_lr_1e-4_iter_30_eps_0-010__image_1.png)|![](figures/cw_norm_linf_lr_1e-4_iter_30_eps_0-010__image_2.png)|\n",
+    "|LINF|0.0001 |30|0.2|0.46006067|0.01213347|0.02426694|![](figures/cw_norm_linf_lr_1e-4_iter_30_eps_0-020__image_0.png)|![](figures/cw_norm_linf_lr_1e-4_iter_30_eps_0-020__image_1.png)|![](figures/cw_norm_linf_lr_1e-4_iter_30_eps_0-020__image_2.png)|\n",
+    "|LINF|0.0001 |50|0.1|0.12335693|0.0101112|0.01112235|![](figures/cw_norm_linf_lr_1e-4_iter_50_eps_0-010__image_0.png)|![](figures/cw_norm_linf_lr_1e-4_iter_50_eps_0-010__image_1.png)|![](figures/cw_norm_linf_lr_1e-4_iter_50_eps_0-010__image_2.png)|\n",
+    "|LINF|0.0001 |50|0.2|0.46107179|0.01213347|0.02426694|![](figures/cw_norm_linf_lr_1e-4_iter_50_eps_0-20__image_0.png)|![](figures/cw_norm_linf_lr_1e-4_iter_50_eps_0-20__image_1.png)|![](figures/cw_norm_linf_lr_1e-4_iter_50_eps_0-20__image_2.png)|\n",
     "\n",
+    "### Citations\n",
+    "https://engineering.purdue.edu/ChanGroup/ECE595/files/chapter3.pdf\n",
+    "\n",
+    "https://medium.com/@iambibek/explanation-of-the-carlini-wagner-c-w-attack-algorithm-to-generate-adversarial-examples-6c1db8669fa2\n",
+    "\n",
+    "https://arxiv.org/abs/1608.04644\n",
     "\n",
     "## JSMA Attack and Evaluation\n",
     "We worked with JSMA attack on a convolutional neural network (CNN). We used the following values for gamma \n",
@@ -217,6 +262,13 @@
     "- [Meng, Ying, et al. (2020)](https://arxiv.org/abs/2001.00308) \"Ensembles of many diverse weak defenses can be strong: defending deep neural networks against adversarial attacks.\" arXiv preprint arXiv:2001.00308.\n",
     "- [LeCun, Y. & Cortes, C. (2010)](http://yann.lecun.com/exdb/mnist/), 'MNIST handwritten digit database', . "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
