Finished BIM report

--- a/Task1_update/report.ipynb
+++ b/Task1_update/report.ipynb
@@ -15,9 +15,10 @@
     "- Code:\n",
     "  - Generated BIM AEs\n",
     "  - Evalauated BIM AEs\n",
+    "  - Generated plots for BIM evaluation\n",
     "- Report:\n",
     "  - Background\n",
-    "  - BIM Attack and Evaluation\n",
+    "  - All BIM related content\n",
     "- Created/managed team repository.\n",
     "- Helped setup development environments.\n",
     "- Organized team meetings.\n",
@@ -33,7 +34,6 @@
     "- Co-managed/organized individual contributions for each team member\n",
     "- Performed experiments, evaluation and analysis on PGD attacks. \n",
     "\n",
-    "__\n",
     "## Background\n",
     "In their work on ATHENA, Ying et al. (2020) solve the problem of adversarial defense, not as a technique, but as a framework, wherein a variable number of weak adversarial defenses (an ensemble) are trained and their collective predictions are used to create a response to adversarial attacks, the robustness and overhead of which are inversely correlated and controlled by the number of weak defenses.\n",
     "\n",
@@ -62,7 +62,7 @@
     "We see that at the initial iteration, the adversarial image is just the source image and with each subsequent step, an $\\alpha$ amount of the perterbations are applied, such that at each step the resulting image remains visually similar to the previous image. \n",
     "\n",
     "### Experimental Setting\n",
-    "Here we consider an adversarial attack on a convolutional neural network (CNN) trained on a subset (10%) of the MNIST dataset using nine variations of the [basic iterative method](https://arxiv.org/pdf/1607.02533.pdf) (BIM). We generate these variations as a pairwise combination over the epsilon values of `0.1, 0.2, 0.3` and maximum iteration values of `50, 60, 70` to reveal how these parameters influence the error rate of the undefeneded model (UM), an athena ensemble, and PGD-ADT. \n",
+    "Here we consider an adversarial attack on a convolutional neural network (CNN) trained on a subset (10%) of the MNIST dataset using nine variations of the [basic iterative method](https://arxiv.org/pdf/1607.02533.pdf) (BIM). We generate these variations as a pairwise combination over the epsilon values of `0.1, 0.2, 0.3` and maximum iteration values of `50, 60, 70` to reveal how these parameters influence the error rate of the undefeneded model (UM), an athena ensemble, and PGD-ADT. We expect that error rate will generally increase as both values increase.\n",
     "\n",
     "Using the following configurations, we generate adversarial examples (AEs) and evaluate their effectivness against the undefended model (UM), the ensemble model, and PGD-ADT. When evaluating the AEs, we use a diverse subset of 20 of Athena's 73 weak defenses for MNIST, which can be found in the first configuration file. \n",
     "- `configs/BIM/athena-mnist.json`\n",
@@ -82,19 +82,21 @@
     "\n",
     "## Evaluation\n",
     "\n",
-    "Plotting the error rates for each model, we find \n",
+    "Plotting the error rates for each model, we find that the undefended model (UM) performs as well as we would expect from our initial investigation - all the BIM attacks fooled the UM more than 90% of the time.\n",
     "\n",
     "![](figures/bim_evaluation.png)\n",
     "\n",
-    "### Undefended Model Results\n",
-    "We find that the error rate drops only for the UM and only twice. We would expect these drops to occur only at 70 and 60, perhaps as some upper bound is reached. However, we find the interesting result that the drop in error rate occurs only from 100 to 90 and 70 to 60; the error rate is the same for 90, 80, and 70. \n",
+    "### Influence of Maximum Iteration\n",
     "\n",
-    "### Ensemble and PGD-ADT Results\n",
-    "The ensemble has nearly the same error rate as PGD-ADT, which in all cases is about 2%. \n",
+    "We see over the range $maximum\\space iteration = [50,\\space 60,\\space 70]$, there is little impact on the error rate of any model. We also see an unexpected trend for the ensemble model (EM), where a maximum iteration value of 60 consistently results in a higher error rate than for a maximum iteration value of 70. However, the difference is small, along with our sample size, so further investigation with a larger range of finer values will be necessary to reveal a meaningful trend.  \n",
     "\n",
+    "### Influence of Epsilon\n",
     "\n",
-    "In conclusion, BIM is only effective against the UM, with the erorr rates of the ensemble model and PGD-ADT being around 2%. Changes to the maximum iterations for BIM only have a (slight) effect on the UM, with the ensemble model and PGD-ADT defenses seeing no change.\n",
-    "___"
+    "We see over the range $\\epsilon = [0.1,\\space 0.2,\\space 0.3]$, there is a large impact on all of the models. However, while the error rate for the undefended model converges at 0.989 for all $\\epsilon > 0.1$, the error rate for the ensemble model and PGD-ADT remain less than 1% until $\\epsilon = 0.3$, where error rate sharply increases to around 45% for the former and around 35% for the latter.\n",
+    "\n",
+    "## Conclusion\n",
+    "\n",
+    "For BIM attacks ranging in values of $\\epsilon = [0.1,\\space 0.2,\\space 0.3]$ and $maximum\\space iteration = [50,\\space 60,\\space 70]$, PGD-ADT proves to be more robust against our collection of 20 of Athena's vanilla weak defenses for MNIST. However, as we did not measure the computational or memory overhead for Athena or PGD-ADT, it is possible that Athena is more efficent."
    ]
   },
   {
