--- a/Task1_update/report.ipynb
+++ b/Task1_update/report.ipynb
@@ -70,9 +70,9 @@
     "- `configs/BIM/attack-bim-mnist.json`\n",
     "- `configs/BIM/data-bim-mnist.json`\n",
     "\n",
-    "All scripts for the BIM experiments can be found in the following jupyter notebook `Task3/scripts/cody_scripts/task3.ipynb`.\n",
+    "All scripts for the BIM experiments can be found in the following jupyter notebook `scripts/cody_scripts/task3.ipynb`.\n",
     "\n",
-    "The AEs we generated can be found at `Task3/data/AE-mnist-cnn-clean-bim_eps{e}_maxiter{i}.npy`, where `e` is a value for epsilon and `i` is the maximum number of iterations.\n",
+    "The AEs we generated can be found at `data/AE-mnist-cnn-clean-bim_eps{e}_maxiter{i}.npy`, where `e` is a value for epsilon and `i` is the maximum number of iterations.\n",
     "\n",
     "### Initial Investigation\n",
     "We first plot a sample of the AEs for each pair of epsilon and maximum iteration values to get an understanding of how these values impact the perterbations.\n",
@@ -97,7 +97,14 @@
     "\n",
     "## Conclusion\n",
     "\n",
-    "For BIM attacks ranging in values of $\\epsilon = [0.1,\\space 0.2,\\space 0.3]$ and $maximum\\space iteration = [50,\\space 60,\\space 70]$, PGD-ADT proves to be more robust against our collection of 20 of Athena's vanilla weak defenses for MNIST. However, as we did not measure the computational or memory overhead for Athena or PGD-ADT, it is possible that Athena is more efficent."
+    "For BIM attacks ranging in values of $\\epsilon = [0.1,\\space 0.2,\\space 0.3]$ and $maximum\\space iteration = [50,\\space 60,\\space 70]$, PGD-ADT proves to be more robust against our collection of 20 of Athena's vanilla weak defenses for MNIST. However, as we did not measure the computational or memory overhead for Athena or PGD-ADT, it is possible that Athena is more efficent.\n",
+    "\n",
+    "## Citations\n",
+    "- [Dong, Yinpeng, et al. (2020)](https://arxiv.org/pdf/2002.05999.pdf) \"Adversarial Distributional Training for Robust Deep Learning.\" Advances in Neural Information Processing Systems 33.\n",
+    "- [Goodfellow, Ian J., Jonathon Shlens, and Christian Szegedy (2014)](https://arxiv.org/abs/1412.6572). \"Explaining and harnessing adversarial examples.\" arXiv preprint arXiv:1412.6572.\n",
+    "- [Kurakin, Alexey, Ian Goodfellow, and Samy Bengio. (2016) ](https://arxiv.org/pdf/1607.02533.pdf) \"Adversarial examples in the physical world.\" arXiv preprint arXiv:1607.02533.\n",
+    "- [Meng, Ying, et al. (2020)](https://arxiv.org/abs/2001.00308) \"Ensembles of many diverse weak defenses can be strong: defending deep neural networks against adversarial attacks.\" arXiv preprint arXiv:2001.00308.\n",
+    "- [LeCun, Y. & Cortes, C. (2010)](http://yann.lecun.com/exdb/mnist/), 'MNIST handwritten digit database', ."
    ]
   },
   {
@@ -266,16 +273,8 @@
     "|    Epsilon=0.5    |    0.7   |     0.9      |    0.8     |\n",
     "|    Epsilon=0.1    |    0.9   |     1.0      |    1.0     |\n",
     "|    Epsilon=0.7    |    0.7   |     0.9      |    0.7     |\n",
-    "|    Epsilon=0.8    |    0.7   |     0.9      |    0.7     |    \n",
-    "\n",
-    "## Citations\n",
-    "- [Dong, Yinpeng, et al. (2020)](https://arxiv.org/pdf/2002.05999.pdf) \"Adversarial Distributional Training for Robust Deep Learning.\" Advances in Neural Information Processing Systems 33.\n",
-    "- [Goodfellow, Ian J., Jonathon Shlens, and Christian Szegedy (2014)](https://arxiv.org/abs/1412.6572). \"Explaining and harnessing adversarial examples.\" arXiv preprint arXiv:1412.6572.\n",
-    "- [Kurakin, Alexey, Ian Goodfellow, and Samy Bengio. (2016) ](https://arxiv.org/pdf/1607.02533.pdf) \"Adversarial examples in the physical world.\" arXiv preprint arXiv:1607.02533.\n",
-    "- [Meng, Ying, et al. (2020)](https://arxiv.org/abs/2001.00308) \"Ensembles of many diverse weak defenses can be strong: defending deep neural networks against adversarial attacks.\" arXiv preprint arXiv:2001.00308.\n",
-    "- [LeCun, Y. & Cortes, C. (2010)](http://yann.lecun.com/exdb/mnist/), 'MNIST handwritten digit database', . "
+    "|    Epsilon=0.8    |    0.7   |     0.9      |    0.7     |    "
    ]
-
   }
  ],
  "metadata": {
