--- a/Task2/Report.ipynb
+++ b/Task2/Report.ipynb
@@ -266,7 +266,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -296,6 +298,69 @@
     "results = pd.read_csv('results/cody_model.csv')\n",
     "results.plot.bar(x='Unnamed: 0', y='loss')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Adversarial Trained Model\n",
+    "\n",
+    "For this model we took a model trained on the benign samples. We then defined a PGD AE designed to attack the ensembles' defenses. We set a loop such that the adversary would generate AEs based on a sample (in this case 1000) of benign samples, the ensemble would train on these generated AEs, and the loop would repeat. The thought was that the model would learn to better understand the weaknesses of the WDs in the ensemble and adjust accordingly. In practice, the method takes far too long to generate AEs, and the return isn't as expected.\n",
+    "\n",
+    "#### Data Used\n",
+    "For the experiment we used benign samples to generate PGD-AEs:\n",
+    "data/test_BS-mnist-clean.npy\n",
+    "data/test_Label-mnist-clean.npy\n",
+    "\n",
+    "#### Testing eval\n",
+    "\n",
+    "##### Base Model\n",
+    "|                                                 |    loss|  categorical_accuracy|\n",
+    "|-------------------------------------------------|--------|----------------------|\n",
+    "|test_AE-mnist-cnn-clean-fgsm_eps0.1.npy          |2.397672|                0.0946|\n",
+    "|test_AE-mnist-cnn-clean-fgsm_eps0.3.npy          |2.373861|                0.1051|\n",
+    "|test_AE-mnist-cnn-clean-bim_ord2_eps0.75.npy     |2.423655|                0.1055|\n",
+    "|test_AE-mnist-cnn-clean-bim_ord2_eps1.2.npy      |2.416791|                0.1123|\n",
+    "|test_AE-mnist-cnn-clean-bim_ordinf_eps0.075.npy  |2.407547|                0.0997|\n",
+    "\n",
+    "##### PGD Trained Model\n",
+    "|                                                |     loss|  categorical_accuracy|\n",
+    "|------------------------------------------------|---------|----------------------|\n",
+    "|test_AE-mnist-cnn-clean-fgsm_eps0.1.npy          |0.158885 |               0.9860|\n",
+    "|test_AE-mnist-cnn-clean-fgsm_eps0.3.npy          |1.897898 |               0.8260|\n",
+    "|test_AE-mnist-cnn-clean-bim_ord2_eps0.75.npy     |0.159789 |               0.9863|\n",
+    "|test_AE-mnist-cnn-clean-bim_ord2_eps1.2.npy      |0.283937 |               0.9746|\n",
+    "|test_AE-mnist-cnn-clean-bim_ordinf_eps0.075.npy  |0.137420 |               0.9879|\n",
+    "\n",
+    "#### Conclusion\n",
+    "\n",
+    "The eval shows that after training on the benign samples for a short period, the . The tests definitely show that training on adversarial can lead to a good defense. However, the data doesn't lead to better results and takes significantly more time to complete (~6hrs for groups of 100). It seems that the time would be better used making more WDs to use in the ensemble rather than attempting to train the model with adversaries.\n",
+    "\n",
+    "#### Future Research\n",
+    "\n",
+    "Other avenues would need to improve the effectiveness of training and the time required to generate AEs. For improving effectiveness, one possibility would be designing an AE variant that could see the ensembele and the model. For reducing time, there are a few different options. Reducing the max_iter and using linf normalization would likely lead to a faster convergence, but before then setting a way to stop training early. Within about 2-3 runs of samples of 1000, the data had already improved immensely. Setting a condition to check if the accuracy remained about the same for some set of runs could prevent unnecessary training and possible overfitting. I also believe training with an ensemble would benefit from parallelization. Right now, the data passes through the ensemble, and the predictions from the ensemble are fed into the inner model. The inner model can be effective with as few as three layers, and each WD in the ensemble requires no backpropagation. Therefore, running the WDs in parallel would allow for more WDs to be included in the ensemble without a significant drop in performance. This may not be possible in the current programming language but would certainly help if so.\n",
+    "#### Links used\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "string indices must be integers",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-11-ae04643de8b2>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     42\u001b[0m             \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshow\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     43\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 44\u001b[1;33m \u001b[0mplot_model_figs\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'../Task2_Update/results/zhymir_adv_history_history'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     45\u001b[0m \u001b[0mplot_model_figs\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'../Task2_Update/results/zhymir_history_history'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-11-ae04643de8b2>\u001b[0m in \u001b[0;36mplot_model_figs\u001b[1;34m(history_p, show, save, save_name)\u001b[0m\n\u001b[0;32m      7\u001b[0m         save_name: the name for the base, function adds postfix and .png end\"\"\"\n\u001b[0;32m      8\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[1;34m'categorical_accuracy'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 9\u001b[1;33m         \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mhistory_p\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'categorical_accuracy'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     10\u001b[0m         \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mhistory_p\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'val_categorical_accuracy'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m         \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtitle\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'model accuracy'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: string indices must be integers"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "markdown",
