--- a/Task2/Report.ipynb
+++ b/Task2/Report.ipynb
@@ -312,7 +312,36 @@
     "data/test_BS-mnist-clean.npy\n",
     "data/test_Label-mnist-clean.npy\n",
     "\n",
+    "For testing on AEs, we used bim and cw AEs available:\n",
+    "\n",
+    "* Task2_Update/Task1_AEs/AE-mnist-cnn-clean-bim_eps0.1_maxiter50.npy\n",
+    "* Task2_Update/Task1_AEs/AE-mnist-cnn-clean-bim_eps0.1_maxiter60.npy\n",
+    "* Task2_Update/Task1_AEs/cw_norm_linf_lr_1e-4_iter_20_eps_0-010_.npy\n",
+    "* Task2_Update/Task1_AEs/AE-mnist-cnn-clean-bim_eps0.3_maxiter50.npy\n",
+    "* Task2_Update/Task1_AEs/cw_norm_l2_lr_1e-5_iter_30_.npy\n",
+    "* Task2_Update/Task1_AEs/cw_norm_linf_lr_1e-4_iter_20_eps_0-020_.npy\n",
+    "* Task2_Update/Task1_AEs/cw_norm_l2_lr_1e-5_iter_50_.npy\n",
+    "* Task2_Update/Task1_AEs/cw_norm_linf_lr_1e-4_iter_10_eps_0-010_.npy\n",
+    "* Task2_Update/Task1_AEs/cw_norm_linf_lr_1e-4_iter_30_eps_0-010_.npy\n",
+    "* Task2_Update/Task1_AEs/cw_norm_l2_lr_1e-5_iter_10_.npy\n",
+    "* Task2_Update/Task1_AEs/cw_norm_l2_lr_1e-3_iter_20_.npy\n",
+    "* Task2_Update/Task1_AEs/AE-mnist-cnn-clean-bim_eps0.2_maxiter60.npy\n",
+    "* Task2_Update/Task1_AEs/AE-mnist-cnn-clean-bim_eps0.3_maxiter70.npy\n",
+    "* Task2_Update/Task1_AEs/AE-mnist-cnn-clean-bim_eps0.3_maxiter60.npy\n",
+    "* Task2_Update/Task1_AEs/cw_norm_linf_lr_1e-4_iter_10_eps_0-20_.npy\n",
+    "* Task2_Update/Task1_AEs/cw_norm_linf_lr_1e-4_iter_50_eps_0-20_.npy\n",
+    "* Task2_Update/Task1_AEs/cw_norm_linf_lr_1e-4_iter_50_eps_0-010_.npy\n",
+    "* Task2_Update/Task1_AEs/cw_norm_l2_lr_1e-3_iter_50_.npy\n",
+    "* Task2_Update/Task1_AEs/cw_norm_l2_lr_1e-5_iter_20_.npy\n",
+    "* Task2_Update/Task1_AEs/AE-mnist-cnn-clean-bim_eps0.2_maxiter70.npy\n",
+    "* Task2_Update/Task1_AEs/cw_norm_l2_lr_1e-3_iter_10_.npy\n",
+    "* Task2_Update/Task1_AEs/cw_norm_l2_lr_1e-3_iter_30_.npy\n",
+    "* Task2_Update/Task1_AEs/AE-mnist-cnn-clean-bim_eps0.1_maxiter70.npy\n",
+    "* Task2_Update/Task1_AEs/cw_norm_linf_lr_1e-4_iter_30_eps_0-020_.npy\n",
+    "* Task2_Update/Task1_AEs/AE-mnist-cnn-clean-bim_eps0.2_maxiter50.npy\n",
+    "\n",
     "#### Testing eval\n",
+    "\n",
     "\n",
     "##### Base Model\n",
     "|                                                 |    loss|  categorical_accuracy|\n",
@@ -332,6 +361,73 @@
     "|test_AE-mnist-cnn-clean-bim_ord2_eps1.2.npy      |0.283937 |               0.9746|\n",
     "|test_AE-mnist-cnn-clean-bim_ordinf_eps0.075.npy  |0.137420 |               0.9879|\n",
     "\n",
+    "#### Adversarial Testing Evaluation\n",
+    "\n",
+    "##### Base Model\n",
+    "|AE                                         |Loss|Categorical Accuracy|\n",
+    "|-------------------------------------------|----|--------------------|\n",
+    "|AE-mnist-cnn-clean-bim_eps0.1_maxiter50.npy| 2.3018479347229004 |0.097  |\n",
+    "|AE-mnist-cnn-clean-bim_eps0.1_maxiter60.npy|2.301830530166626  |0.098 |\n",
+    "|cw_norm_linf_lr_1e-4_iter_20_eps_0-010_.npy| 2.302213430404663 | 0.014 |\n",
+    "|AE-mnist-cnn-clean-bim_eps0.3_maxiter50.npy|2.301875591278076  | 0.116 |\n",
+    "|cw_norm_l2_lr_1e-5_iter_30_.npy|2.3022828102111816  |0.019  |\n",
+    "|cw_norm_linf_lr_1e-4_iter_20_eps_0-020_.npy|2.3022823333740234  | 0.016 |\n",
+    "|cw_norm_l2_lr_1e-5_iter_50_.npy|2.3022799491882324  |0.014  |\n",
+    "|cw_norm_linf_lr_1e-4_iter_10_eps_0-010_.npy|2.30220890045166  |0.018  |\n",
+    "|cw_norm_linf_lr_1e-4_iter_30_eps_0-010_.npy|2.3022162914276123  | 0.017 |\n",
+    "|cw_norm_l2_lr_1e-5_iter_10_.npy|2.3022871017456055  |0.016  |\n",
+    "|cw_norm_l2_lr_1e-3_iter_20_.npy|2.302288293838501  |0.015  |\n",
+    "|AE-mnist-cnn-clean-bim_eps0.2_maxiter60.npy|2.301849365234375  |0.119  |\n",
+    "|AE-mnist-cnn-clean-bim_eps0.3_maxiter70.npy|2.30184268951416  |0.126  |\n",
+    "|AE-mnist-cnn-clean-bim_eps0.3_maxiter60.npy|2.301848888397217  |0.127 |\n",
+    "|cw_norm_linf_lr_1e-4_iter_10_eps_0-20_.npy|2.302253007888794  |0.02  |\n",
+    "|cw_norm_linf_lr_1e-4_iter_50_eps_0-20_.npy|2.302262306213379  |0.013  |\n",
+    "|cw_norm_linf_lr_1e-4_iter_50_eps_0-010_.npy|2.3022093772888184  |0.016  |\n",
+    "|cw_norm_l2_lr_1e-3_iter_50_.npy|2.3022680282592773  |0.017  |\n",
+    "|cw_norm_l2_lr_1e-5_iter_20_.npy|2.3022899627685547  | 0.016  |\n",
+    "|AE-mnist-cnn-clean-bim_eps0.2_maxiter70.npy|2.301814317703247  |0.127  |\n",
+    "|cw_norm_l2_lr_1e-3_iter_10_.npy|2.302294969558716  |0.016  |\n",
+    "|cw_norm_l2_lr_1e-3_iter_30_.npy|2.302274465560913  |0.019  |\n",
+    "|AE-mnist-cnn-clean-bim_eps0.1_maxiter70.npy|2.3018500804901123  | 0.098  |\n",
+    "|cw_norm_linf_lr_1e-4_iter_30_eps_0-020_.npy| 2.3022642135620117 | 0.016 |\n",
+    "|AE-mnist-cnn-clean-bim_eps0.2_maxiter50.npy| 2.301779270172119 | 0.116 |\n",
+    "\n",
+    "|AE                                         |Loss|Categorical Accuracy|\n",
+    "|-------------------------------------------|----|--------------------|\n",
+    "|AE-mnist-cnn-clean-bim_eps0.1_maxiter50.npy| 0.07875561714172363 |0.982 |\n",
+    "|AE-mnist-cnn-clean-bim_eps0.1_maxiter60.npy|0.08080007880926132|0.981 |\n",
+    "|cw_norm_linf_lr_1e-4_iter_20_eps_0-010_.npy|0.06136084720492363|0.99 |\n",
+    "|AE-mnist-cnn-clean-bim_eps0.3_maxiter50.npy|0.6369091868400574| 0.807|\n",
+    "|cw_norm_l2_lr_1e-5_iter_30_.npy| 0.06164976581931114| 0.99 |\n",
+    "|cw_norm_linf_lr_1e-4_iter_20_eps_0-020_.npy|0.0626065582036972|0.99|\n",
+    "|cw_norm_l2_lr_1e-5_iter_50_.npy|0.061146050691604614|0.99|\n",
+    "|cw_norm_linf_lr_1e-4_iter_10_eps_0-010_.npy|0.061118852347135544 | 0.99|\n",
+    "|cw_norm_linf_lr_1e-4_iter_30_eps_0-010_.npy|0.06125250831246376 |0.99 |\n",
+    "|cw_norm_l2_lr_1e-5_iter_10_.npy|0.06260556727647781|0.99|\n",
+    "|cw_norm_l2_lr_1e-3_iter_20_.npy|0.06213493272662163|0.989 |\n",
+    "|AE-mnist-cnn-clean-bim_eps0.2_maxiter60.npy|0.19661487638950348|0.956|\n",
+    "|AE-mnist-cnn-clean-bim_eps0.3_maxiter70.npy|0.6509324312210083| 0.814 |\n",
+    "|AE-mnist-cnn-clean-bim_eps0.3_maxiter60.npy|0.6504712104797363 | 0.819 |\n",
+    "|cw_norm_linf_lr_1e-4_iter_10_eps_0-20_.npy|0.06297466158866882| 0.99|\n",
+    "|cw_norm_linf_lr_1e-4_iter_50_eps_0-20_.npy|0.0628429502248764|0.989|\n",
+    "|cw_norm_linf_lr_1e-4_iter_50_eps_0-010_.npy|0.0613950714468956 |0.99 |\n",
+    "|cw_norm_l2_lr_1e-3_iter_50_.npy|0.06200283020734787|0.989|\n",
+    "|cw_norm_l2_lr_1e-5_iter_20_.npy|0.06146208196878433|0.99 |\n",
+    "|AE-mnist-cnn-clean-bim_eps0.2_maxiter70.npy|0.19736099243164062|0.954 |\n",
+    "|cw_norm_l2_lr_1e-3_iter_10_.npy|0.06362543255090714|0.989|\n",
+    "|cw_norm_l2_lr_1e-3_iter_30_.npy|0.06184862554073334|0.989|\n",
+    "|AE-mnist-cnn-clean-bim_eps0.1_maxiter70.npy|0.081305131316185|0.98|\n",
+    "|cw_norm_linf_lr_1e-4_iter_30_eps_0-020_.npy|0.06318363547325134|0.99|\n",
+    "|AE-mnist-cnn-clean-bim_eps0.2_maxiter50.npy|0.19457975029945374|0.955 |\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "#### Conclusion\n",
     "\n",
     "The eval shows that after training on the benign samples for a short period, the . The tests definitely show that training on adversarial can lead to a good defense. However, the data doesn't lead to better results and takes significantly more time to complete (~6hrs for groups of 100). It seems that the time would be better used making more WDs to use in the ensemble rather than attempting to train the model with adversaries.\n",
@@ -339,28 +435,13 @@
     "#### Future Research\n",
     "\n",
     "Other avenues would need to improve the effectiveness of training and the time required to generate AEs. For improving effectiveness, one possibility would be designing an AE variant that could see the ensembele and the model. For reducing time, there are a few different options. Reducing the max_iter and using linf normalization would likely lead to a faster convergence, but before then setting a way to stop training early. Within about 2-3 runs of samples of 1000, the data had already improved immensely. Setting a condition to check if the accuracy remained about the same for some set of runs could prevent unnecessary training and possible overfitting. I also believe training with an ensemble would benefit from parallelization. Right now, the data passes through the ensemble, and the predictions from the ensemble are fed into the inner model. The inner model can be effective with as few as three layers, and each WD in the ensemble requires no backpropagation. Therefore, running the WDs in parallel would allow for more WDs to be included in the ensemble without a significant drop in performance. This may not be possible in the current programming language but would certainly help if so.\n",
-    "#### Links used\n"
+    "#### Links used\n",
+    "https://arxiv.org/pdf/1706.06083\n",
+    "\n",
+    "https://towardsdatascience.com/know-your-enemy-7f7c5038bdf3\n",
+    "\n",
+    "https://openreview.net/pdf?id=r1VmtsC5t7"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "string indices must be integers",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-11-ae04643de8b2>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     42\u001b[0m             \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshow\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     43\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 44\u001b[1;33m \u001b[0mplot_model_figs\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'../Task2_Update/results/zhymir_adv_history_history'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     45\u001b[0m \u001b[0mplot_model_figs\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'../Task2_Update/results/zhymir_history_history'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-11-ae04643de8b2>\u001b[0m in \u001b[0;36mplot_model_figs\u001b[1;34m(history_p, show, save, save_name)\u001b[0m\n\u001b[0;32m      7\u001b[0m         save_name: the name for the base, function adds postfix and .png end\"\"\"\n\u001b[0;32m      8\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[1;34m'categorical_accuracy'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 9\u001b[1;33m         \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mhistory_p\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'categorical_accuracy'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     10\u001b[0m         \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mhistory_p\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'val_categorical_accuracy'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m         \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtitle\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'model accuracy'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: string indices must be integers"
-     ]
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -369,6 +450,13 @@
     "## Citations\n",
     "[Meng, Ying, et al.](https://arxiv.org/abs/2001.00308) \"Ensembles of many diverse weak defenses can be strong: defending deep neural networks against adversarial attacks.\" arXiv preprint arXiv:2001.00308 (2020)."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
