--- a/Task2/Report.ipynb
+++ b/Task2/Report.ipynb
@@ -35,7 +35,18 @@
     "\n",
     "### Vincent Davidson\n",
     "\n",
-    "- Discussed with team about plan \n",
+    "- Code Contributions:\n",
+    "\t- Created a WD ensemble and Keras model for evaluation\n",
+    "\t- Created script to train model and save results\n",
+    "- Report Contributions:\t\t\n",
+    "    - Evaluated Task2_update using Task1_AEs on the WD ensemble \n",
+    "    - Trained the model to evaluate Athena within the ensemble class\n",
+    "- Team Organization Contributions:\n",
+    "    - Discussed with team about plan \n",
+    "    - Helped team members navigate through Github repository/branches with scripts\n",
+    "    - Provided scripts for team members to utilize within terminal of PyCharm App\n",
+    "- Results:\n",
+    "    - Task_2 Update using Task1_AEs  \n",
     "___\n",
     "\n",
     "## Informal Breakdown of Our Approach\n",
@@ -387,7 +398,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
